--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -23,7 +23,7 @@
     <div class="nexmoe-copyright">
         &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
         <%= __('Powered by') %> <a href="http://hexo.io/" target="_blank">Hexo</a>
-        & <a href="https://github.com/tangyuxian/hexo-theme-nexmoe" target="_blank">Nexmoe</a><br/>
+        & <a href="https://github.com/tangyuxian/hexo-theme-tangyuxian" target="_blank">Tangyuxian</a><br/>
         <a href="http://beian.miit.gov.cn" target="_blank"><%= theme.beian %></a><br/>
         <% if (theme.busuanzi) { %>
         <div style="font-size: 12px">
