--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -3,12 +3,17 @@
     <div class="nexmoe-post">
         <a href="<%- url_for(page.path) %>">
             <% if (page.cover){ %>
-                <div class="nexmoe-post-cover mdui-ripple" style="padding-bottom: <%- page.coverHeight/page.coverWidth*100 %>%;"> 
+                <div class="nexmoe-post-cover mdui-ripple" style="padding-bottom: <%- page.coverHeight/page.coverWidth*100 %>%;">
                     <img data-src="<%- page.cover %>" data-sizes="auto" alt="<%= page.title %>" class="lazyload">
                     <h1><%= page.title %></h1>
                 </div>
+            <% }else if (cover_auto_post(page.tags)){ %>
+                <div class="nexmoe-post-cover mdui-ripple" style="padding-bottom: <%- theme.background.autoCoverHeight/theme.background.autoCoverWidth*100 %>%;">
+                    <img data-src="<%- cover_auto_post(page.tags) %>" data-sizes="auto" alt="<%= page.title %>" class="lazyload">
+                    <h1><%= page.title %></h1>
+                </div>
             <%}  else{ %>
-                <div class="nexmoe-post-cover mdui-ripple" style="padding-bottom: <%- theme.background.height/theme.background.width*100 %>%;"> 
+                <div class="nexmoe-post-cover mdui-ripple" style="padding-bottom: <%- theme.background.height/theme.background.width*100 %>%;">
                     <img data-src="<%- theme.background.path %>" data-sizes="auto" alt="<%= page.title %>" class="lazyload">
                     <h1><%= page.title %></h1>
                 </div>
