--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="<%= theme.iconlib %>">
   <% } %>
   <%- css_auto_version('css/style') %>
+  <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
 </head>
 
 <body class="mdui-drawer-body-left">
@@ -74,7 +75,6 @@
   <%- partial('_partial/after-footer') %>
   <%- partial('_partial/analytics') %>
 </body>
-
 </html>
 <% if (theme.daovoice.enable){ %>
 <script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;a.charset="utf-8";m.parentNode.insertBefore(a,m)})(window,document,"script",('https:' == document.location.protocol ? 'https:' : 'http:') + "//widget.daovoice.io/widget/<%= theme.daovoice.app_id %>.js","daovoice")</script>
