--- a/_config.styl
+++ b/_config.styl
@@ -5,7 +5,8 @@ $theme_color = #e67249
 $theme_color_time = #f8e6d8
 //-主题部分阴影主色调
 $theme_color_shadow = #e67249;
-
+//-文章置顶小图
+$theme_post_top = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/background/cangshu.png"
 //主要插件配置项目
 //-播放器背景图
 $bg_aplayer = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/background/chichi.jpg"
@@ -14,12 +15,12 @@ $bg_aplayer = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/backgrou
 $bg_veditor = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/background/papa.jpg"
 
 //-聊天组件daodream
-$bg_daodream_button = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@latest/head/call.jpg"
-$bg_daodream_loading = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@latest/head/call.jpg"
-$bg_daodream_avatar = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@latest/head/head.jpg"
+$bg_daodream_button = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/head/call.jpg"
+$bg_daodream_loading = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/head/call.jpg"
+$bg_daodream_avatar = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/head/head.jpg"
 
 //-时钟中心背景
-$bg_clock_logo = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@latest/background/cangshu.png"
+$bg_clock_logo = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/background/cangshu.png"
 
 //-天气中心旁边
-$bg_qweather_logo = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@latest/background/cangshu.png"
+$bg_qweather_logo = "https://cdn.jsdelivr.net/gh/tangyuxian/blog_image@master/background/cangshu.png"
