修改新的cdn加速链接

--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -1,12 +1,12 @@
-<script src="https://unpkg.com/lazysizes@5.1.0/lazysizes.min.js"></script>
-<script src="https://cdn.staticfile.org/highlight.js/10.0.0/highlight.min.js"></script>
-<script src="https://unpkg.com/mdui@0.4.3/dist/js/mdui.min.js?v=1"></script>
+<script src="https://lib.baomitu.com/lazysizes/5.1.0/lazysizes.min.js"></script>
+<script src="https://lib.baomitu.com/highlight.js/10.0.0/highlight.min.js"></script>
+<script src="https://lib.baomitu.com/mdui/0.4.3/js/mdui.min.js"></script>
 
 <script>
 	hljs.initHighlightingOnLoad();
 </script>
 
-<script src="https://unpkg.com/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+<script src="https://lib.baomitu.com/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="/lib/fancybox/js/jquery.fancybox.min.js"></script>
 
 <% if (theme.cdn.copy && theme.function.copy) { %>
@@ -14,7 +14,7 @@
 <% } %>
 <%- js_auto_version('js/app') %>
 
-<script src="https://unpkg.com/justifiedGallery@3.8.1/dist/js/jquery.justifiedGallery.min.js"></script>
+<script src="https://lib.baomitu.com/justifiedGallery/3.8.1/js/jquery.justifiedGallery.min.js"></script>
 <script>
 	$(".justified-gallery").justifiedGallery({
 		rowHeight: 160,
