修改了主题文件

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -39,7 +39,7 @@ if (is_archive()){
 
 <% if (theme.customStyles) { %>
     <% theme.customStyles.forEach(function(custom){ %>
-        <%- css_auto_version('custom.css') %>
+        <%- css_auto_version(custom) %>
     <% }) %>
 <% } %>
 
