--- a/layout/_pendant/qweather.ejs
+++ b/layout/_pendant/qweather.ejs
@@ -1,16 +1,21 @@
-<div class="qweather" >
-    <div id="he-plugin-standard">
-        <iframe allowtransparency="true" frameborder="0" width="304" height="96" scrolling="no" src="//tianqi.2345.com/plugin/widget/index.htm?s=2&z=1&t=0&v=0&d=2&bd=0&k=000000&f=ff8040&ltf=009944&htf=cc0000&q=1&e=1&a=1&c=54511&w=300&h=96&align=center"></iframe>
-    </div>
-    <div class="qweather-logo">
+<div class="nexmoe-pd-item">
+    <div class="qweather">
+        <div id="he-plugin-standard">
+            <iframe allowtransparency="true" frameborder="0" width="304" height="96" scrolling="no"
+                src="//tianqi.2345.com/plugin/widget/index.htm?s=2&z=1&t=0&v=0&d=2&bd=0&k=000000&f=ff8040&ltf=009944&htf=cc0000&q=1&e=1&a=1&c=54511&w=300&h=96&align=center"></iframe>
+        </div>
+        <div class="qweather-logo">
 
+        </div>
     </div>
 </div>
+
 <style>
-    .qweather{
+    .qweather {
         position: relative;
         padding-right: 5px;
     }
+
     .qweather #he-plugin-standard {
         border: 2px solid var(--color-primary);
         box-shadow: 0 1px 0 0 var(--color-primary), 0 1px 2px 0 var(--color-primary);
@@ -18,7 +23,8 @@
         width: 300px;
         overflow: hidden;
     }
-    .qweather-logo{
+
+    .qweather-logo {
         position: absolute;
         right: 0;
         top: -15px;
