--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -1,33 +1,95 @@
-<div class="nexmoe-widget-wrap">
-    <div class="nexmoe-widget nexmoe-search">
-        <% if (options.search.type=='engine') { %> 
-            <form id="search_form" action_e="<%= options.search.url %>" onsubmit="return search();">
-                <label><input id="search_value" name="q" type="search" placeholder="<%= __('search') %>"></label>
-            </form>
-        <% } else { %>
-            <form id="search_form">
-                <label><input class="st-default-search-input" id="search_value" name="q" type="search" placeholder="<%= __('search') %>" style="
+<div style="position: relative;">
+    <div class="nexmoe-widget-wrap">
+        <div class="nexmoe-widget nexmoe-search">
+            <% if (options.search.type=='engine' ) { %>
+                <form id="search_form" action_e="<%= options.search.url %>" onsubmit="return search();">
+                    <label><input id="search_value" name="q" type="search" placeholder="<%= __('search') %>"></label>
+                </form>
+                <% } else { %>
+                    <form id="search_form">
+                        <label><input oninput="sinput()" class="st-default-search-input search-input"
+                                style="color:var(--color-text-2);" id="search_value" name="q" type="search"
+                                placeholder="<%= __('search') %>" style="
                     font-size: 15px !important;
                     height: 56px !important;
                     background-image: none;
                 "></label>
-            </form>
-        <% } %> 
+                    </form>
+                    <% } %>
+        </div>
+    </div>
+
+    <div class="search-body">
+
     </div>
 </div>
+<style>
+    .search-body {
+        position: absolute;
+        width: calc(100% - 40px);
+        margin: 0 20px;
+        box-sizing: border-box;
+        top: 60px;
+        right: 0;
+        background-color: var(--color-card);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        z-index: 1000;
+        max-height: 300px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        color: var(--color-text-1);
+        border-radius: 12px;
+    }
+    .search-body a {
+        color: var(--color-text-1);
+    }
+    .search-body .keyword {
+        font-weight: bold;
+        color: var(--color-primary);
+    }
+    .search-result {
+       padding: 10px 20px;
+       border-bottom: 1px dashed var(--color-primary);
+       cursor: pointer;
+    }
 
-<% if (options.search.type == 'local') { %>
-	<%- js_auto_version('js/search') %>
-<%  } %>
+    .search-result-title {
+        font-size: 16px;
+        font-weight: bold;
+        white-space: nowrap;
+        /* 防止文本换行 */
+        overflow: hidden;
+        /* 隐藏溢出的内容 */
+        text-overflow: ellipsis;
+        /* 显示省略号来代表被修剪的文本 */
+    }
 
-<% if (options.search.type=='swiftype') { %>
-	<script type="text/javascript">
-		var id='<%-options.search.id%>';
-		(function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
-		(w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
-		e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
-		})(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
+    .search-result-text {
+        font-size: 14px;
+        white-space: nowrap;
+        /* 防止文本换行 */
+        overflow: hidden;
+        /* 隐藏溢出的内容 */
+        text-overflow: ellipsis;
+        /* 显示省略号来代表被修剪的文本 */
+    }
+    
+</style>
 
-		_st('install', id ,'2.0.0');
-	</script>
-<% } %>
+<% if (options.search.type=='local' ) { %>
+    <%- js_auto_version('js/search') %>
+        <% } %>
+
+            <% if (options.search.type=='swiftype' ) { %>
+                <script type="text/javascript">
+                    var id = '<%-options.search.id%>';
+                    (function (w, d, t, u, n, s, e) {
+                        w['SwiftypeObject'] = n; w[n] = w[n] || function () {
+                            (w[n].q = w[n].q || []).push(arguments);
+                        }; s = d.createElement(t);
+                        e = d.getElementsByTagName(t)[0]; s.async = 1; s.src = u; e.parentNode.insertBefore(s, e);
+                    })(window, document, 'script', '//s.swiftypecdn.com/install/v2/st.js', '_st');
+
+                    _st('install', id, '2.0.0');
+                </script>
+                <% } %>
