--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -39,7 +39,7 @@ $gutter = 24px;
 //     }
 // }
 
-.dark:root {
+[data-theme="dark"]:root {
         --color-card: #2b2b2b;
          --color-card-opacity: rgba(0, 0, 0, 0.5);
         --color-text-1: #fff;
